force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <description>Custom object for Smart2 opportunities used by PBB Lifestyle stream.
        &quot;US-4310
        US-4400
        US-4401
        US-4454
        Name of the conversation will be a merge of fields: &quot;&quot;Client name: Category - &quot;&quot;Smart2 Task&quot;&quot;
        The name of the customer (linked to the BPID) to which the task is assigned&quot;</description>
    <label>Conversation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>