force-app/main/default/objects/Conversation__c/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <description>Business Partner Identity, the unique number provided to each entity by which we identify each client associated with the conversation.</description>
    <formula>Client__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPID</label>
    <type>Text</type>
</CustomField>