force-app/main/default/objects/Conversation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>&quot;US-4310
            US-4454
            The category to which the task is assigned (e.g. Campaigns, Next Best Offer, Retention)&quot;</description>
    <inlineHelpText>This category represents the product the opportunity is linked to</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Businesses Like Mine</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Next Best Offer</fullName>
            </value>
            <value>
                <fullName>Portfolio Management</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Special Events</fullName>
            </value>
            <value>
                <fullName>Ucount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>