force-app/main/default/objects/Conversation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>&quot;US-4454
            Deduped customer number to which the task was assigned.  &quot;</description>
    <inlineHelpText>Client assigned to the conversation</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>