force-app/main/default/objects/Conversation__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>&quot;US-4450
            Timestamp of the feedback (when it was captured)
            Created by Salesforce at the time pf the saving of the opportunity
            Part of data export back to Smart2&quot;</description>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>