force-app/main/default/objects/Conversation__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who closed the conversation, SGPRT-1018</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closed_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>