force-app/main/default/objects/Conversation__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>US-4450
            A short comment of the conversation sent to Smart2</description>
    <inlineHelpText>Provide any further context or comment</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>