force-app/main/default/objects/Conversation__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>&quot;US-4310
            US-4401
            US-4454
            The detailed description of the task as received from Smart2&quot;</description>
    <inlineHelpText>Details the description of a task as defined in Smart2</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>