force-app/main/default/objects/Conversation__c/fields/Expected_OI__c.field-meta.xml
<CustomField>
    <fullName>Expected_OI__c</fullName>
    <description>Expected Opportunity Income</description>
    <inlineHelpText>Expected Operating Income is a ZAR value expected to be earned from a postive outcome from a particular conversation, SGPRT-841</inlineHelpText>
    <label>Expected OI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>