force-app/main/default/objects/Conversation__c/fields/ExternalIdLeadKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdLeadKey__c</fullName>
    <description>&quot;US-4450
            US-4454
            A unique ID assigned to the customer task - forms part of the unique identifier (in conjunction with the file ID) for the task (ascending number assigned by Smart2)&quot;</description>
    <externalId>true</externalId>
    <label>ExternalIdLeadKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>