force-app/main/default/objects/Conversation__c/fields/Future_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Contact_Date__c</fullName>
    <description>PBB Smart2 integration field received via API, SGPRT-1029</description>
    <label>Future Contact Date</label>
    <type>DateTime</type>
</CustomField>