force-app/main/default/objects/Conversation__c/fields/Inactive_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to a client to show only inactive conversations</description>
    <label>Inactive Conversation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversations (Inactive Conversation)</relationshipLabel>
    <relationshipName>Conversations2</relationshipName>
    <type>Lookup</type>
</CustomField>