force-app/main/default/objects/Conversation__c/fields/Is_User_A_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_User_A_Manager__c</fullName>
    <description>If the person is a manager, US-4580</description>
    <formula>IF( Owner:User.ManagerId  = $User.Id , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User A Manager</label>
    <type>Checkbox</type>
</CustomField>