force-app/main/default/objects/Conversation__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If Conversation is active then bankers can manage it, inactive Conversations are only for reporting purposes, US-3487</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>