force-app/main/default/objects/Conversation__c/fields/isClosed__c.field-meta.xml
<CustomField>
    <fullName>isClosed__c</fullName>
    <description>US-4580</description>
    <formula>Response__c != &apos;&apos;</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>