force-app/main/default/objects/Conversation__c/fields/PBB_Attrition_Risk__c.field-meta.xml
<CustomField>
    <fullName>PBB_Attrition_Risk__c</fullName>
    <description>Risk of attrition/loss (smart2), US-4580</description>
    <label>Attrition Risk</label>
    <length>64</length>
    <type>Text</type>
</CustomField>