force-app/main/default/objects/Conversation__c/fields/PBB_BusinessRiskIndex__c.field-meta.xml
<CustomField>
    <fullName>PBB_BusinessRiskIndex__c</fullName>
    <description>&quot;US-4400
            US-4454
            The maximum, valid BRI for the customer to which the conversation is assigned
            A higher number indicates a lower risk/higher credit score  (7-9)
            A lower number indicates a higher risk/lower credit score (1-6) &quot;</description>
    <inlineHelpText>A higher number indicates a higher credit score  (7-9) and lower risk.
            A lower number indicates a lower credit score (1-6) and high risk</inlineHelpText>
    <label>Business Risk Index</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>