force-app/main/default/objects/Conversation__c/fields/PBB_File_Id__c.field-meta.xml
<CustomField>
    <fullName>PBB_File_Id__c</fullName>
    <description>&quot;US-4450
            US-4454
            The month on which data the task is based.  Used to uniquely Identify conversations ALONG with the ID
            (yyyydd of the creation of the task)&quot;</description>
    <label>File Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>