force-app/main/default/objects/Conversation__c/fields/PBB_HighValueCD__c.field-meta.xml
<CustomField>
    <fullName>PBB_HighValueCD__c</fullName>
    <description>US-4454
            Whether or not the customer has a high value call deposit.  A call deposit with a  balance of more that R3million will be counted here</description>
    <inlineHelpText>This is an indicator of whether a client is high net worth earner whom have balances exceeding R3 million</inlineHelpText>
    <label>High Value CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>