force-app/main/default/objects/Conversation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>US-4450
            Picklist is dependant on response and category
            Part of export to Smart2</description>
    <inlineHelpText>List of applicable client reasons for their response to the conversation</inlineHelpText>
    <label>Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>