force-app/main/default/objects/Conversation__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>&quot;US-4450
            Field to record client response during phone call
            Part of export to Smart2&quot;</description>
    <inlineHelpText>List of applicable client responses to the conversation</inlineHelpText>
    <label>Response</label>
    <length>250</length>
    <type>Text</type>
</CustomField>