force-app/main/default/objects/Conversation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>US-4580</description>
    <formula>IF(Response__c != &apos;&apos;, &apos;Completed&apos;, &apos;Not Started&apos;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>