force-app/main/default/objects/Conversation__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>US-4310
            US-4400
            US-4454
            The sub-product of the initial product cateogory selected.</description>
    <inlineHelpText>&quot;US-4310
            US-4400
            US-4454
            The sub-product of the initial product cateogory selected.&quot;</inlineHelpText>
    <label>Sub-Category</label>
    <length>250</length>
    <type>Text</type>
</CustomField>