force-app/main/default/objects/Conversation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>&quot;US-4454
            A finer detail value of the Category and Sub Category. It isn&apos;t visible in frontend, and it is used for measurement on the backend&quot;</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>