force-app/main/default/objects/Conversation__c/validationRules/Not_editable_when_not_active.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_editable_when_not_active</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Response__c) || ISCHANGED( Reason__c ) || ISCHANGED( Comments__c ) || ISCHANGED( Future_Contact_Date__c ) ) &amp;&amp;  NOT(IsActive__c)</errorConditionFormula>
    <errorMessage>You cannot edit inactive record</errorMessage>
</ValidationRule>