force-app/main/default/objects/Conversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Client__c</columns>
    <columns>Reason__c</columns>
    <columns>Comments__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>